<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.pivotallabs.internal.tdd</groupId>
	<artifactId>android-tdd</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>apk</packaging>
	<name>Android TDD</name>
	<description>Android TDD rampup</description>

	<repositories>
		<repository>
			<id>oss-sonatype</id>
			<name>oss-sonatype</name>
			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>

	<dependencies>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.8.2</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>1.9.5</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.robolectric</groupId>
			<artifactId>robolectric</artifactId>
			<version>2.3-SNAPSHOT</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>1.8.4</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<!-- Json parsing lib -->
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.2.4</version>
		</dependency>

		<dependency>
			<!-- Dependency inject -->
			<groupId>org.roboguice</groupId>
			<artifactId>roboguice</artifactId>
			<version>2.0</version>
		</dependency>

		<dependency>
			<!-- android platform -->
			<groupId>com.google.android</groupId>
			<artifactId>android</artifactId>
			<version>4.0.1.2</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<!-- android support libraries -->
			<groupId>com.android.support</groupId>
			<artifactId>support-v4</artifactId>
			<version>19.0.1</version>
		</dependency>

		<dependency>
			<!-- Google play services -->
			<groupId>com.google.android.gms</groupId>
			<artifactId>google-play-services</artifactId>
			<version>11</version>
			<type>apklib</type>
		</dependency>

	</dependencies>

	<build>
		<finalName>${project.artifactId}</finalName>
		<sourceDirectory>src/</sourceDirectory>
		<testOutputDirectory>target/test-classes</testOutputDirectory>
		<testSourceDirectory>test/</testSourceDirectory>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>emma-maven-plugin</artifactId>
				<version>1.0-alpha-3</version>
				<configuration>
					<filters>
						<filter>-android.*</filter>
						<filter>-com.pivotallabs.internal.tdd.BuildConfig</filter>
						<filter>-com.pivotallabs.internal.tdd.R</filter>
						<filter>-com.pivotallabs.internal.tdd.R$*</filter>
						<filter>-com.pivotallabs.internal.tdd.application.McxBuild
						</filter>
					</filters>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.jayway.maven.plugins.android.generation2</groupId>
				<artifactId>android-maven-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<androidManifestFile>${project.basedir}/AndroidManifest.xml
					</androidManifestFile>
					<sdk>
						<!-- platform or api level (api level 4 = platform 1.6) -->
						<platform>18</platform>
					</sdk>
					<undeployBeforeDeploy>true</undeployBeforeDeploy>
					<release>false</release>
				</configuration>
				<extensions>true</extensions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.6</version>
				<configuration>
					<excludes>
						<exclude>**/Test*.java</exclude>
					</excludes>
					<argLine>-Xmx1024m -XX:MaxPermSize=512m</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jarsigner-plugin</artifactId>
				<version>1.2</version>
				<executions>
					<execution>
						<id>signing</id>
						<goals>
							<goal>sign</goal>
							<goal>verify</goal>
						</goals>
						<phase>package</phase>
						<inherited>true</inherited>
						<configuration>
							<removeExistingSignatures>true</removeExistingSignatures>
							<archiveDirectory />
							<includes>
								<include>target/tddrampup.apk</include>
							</includes>
							<keystore>tdd-rampup.keystore</keystore>
							<alias>tdd</alias>
							<storepass>rampup1</storepass>
							<keypass>rampup1</keypass>
							<arguments>
								<argument>-sigalg</argument>
								<argument>MD5withRSA</argument>
								<argument>-digestalg</argument>
								<argument>SHA1</argument>
							</arguments>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>emma</id>
			<build>
				<plugins>
					<plugin>
						<groupId>com.jayway.maven.plugins.android.generation2</groupId>
						<artifactId>android-maven-plugin</artifactId>
						<version>3.8.0</version>
						<configuration>
							<sdk>
								<!-- platform or api level (api level 4 = platform 1.6) -->
								<platform>18</platform>
							</sdk>
							<undeployBeforeDeploy>true</undeployBeforeDeploy>
							<release>false</release>
							<test>
								<coverage>true</coverage>
								<createReport>true</createReport>
							</test>
							<emma>
								<enable>true</enable>
								<classFolders>${project.basedir}/target/classes/</classFolders>
								<outputMetaFile>${project.basedir}/target/emma/coverage.em
								</outputMetaFile>
							</emma>
							<dex>
								<noLocals>true</noLocals>
								<!-- must be set for emma -->
							</dex>
						</configuration>
						<extensions>true</extensions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>2.6</version>
						<configuration>
							<argLine>-Xmx1024m</argLine>
							<systemPropertyVariables
								combine.children="append">
								<emma.rt.control>false</emma.rt.control>
							</systemPropertyVariables>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
